index.css
@font-face {
    src: url("fonts/Poppins-Regular.ttf");
    font-family: "main";
}

@font-face {
    src: url("fonts/Poppins-Black.ttf");
    font-family: "titles";
}

@font-face {
    src: url("fonts/Poppins-Bold.ttf");
    font-family: "subtitle";
}

body {
    margin: 0px;
    background-color: aliceblue;
    font-family: "main", sans-serif;
    cursor: none;
}

.rain1 {
    width: 100%;
    height: 100%;
    z-index: -1;
    position: fixed;
    background-repeat: repeat;
    background: url("images/rain.png");
    pointer-events: none;
    animation: rain1move 4s infinite linear;
}

@keyframes rain1move {
    0% {
        background-position: 0px 0px;
    }
    100% {
        background-position: -10px 100px;
    }
}

a {
    text-decoration: none;
}

a:link{
    color: blue;
}

a:visited {
    color: blue;
}

.name {
    width: 100%;
    height: 200px;
    background: url("images/background.jpg") center / cover no-repeat !important;
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: "titles";
}

.name .title {
    color: white;
    font-size: 82px;
    letter-spacing: 4px;
}

.whoiam {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-self: center;
    margin-top: 30px;
    border-style: groove;
    width: 50%;
    border-color: transparent;
    background-color: white;
    border-radius: 20px;
    padding: 20px;
    box-shadow: 3px 3px 20px aquamarine;
}

.whoiam .text {
    width: 60%;
}

.whoiam .doggypic{
    display: flex;
    padding: 5%;
    height: 100%;
    width: 40%;;
    justify-content: center;

}


.whoiam .doggypic img{
    width: 70%;
    height: 70%;
    background-color: olivedrab;
    border-radius: 20px;
}

.whoiam .info {
    color: purple;
    font-size: xx-large;
    font-weight: bold;
    font-family: "subtitle";
}

.whoiam .brief{
    font-size: 16px;
}

.projects {
    display: flex;
    flex-direction: column;
    justify-self: center;
    justify-content: center;
    align-items: center;
    width: 50%;
    padding: 20px;
    background-color: white;
    border-radius: 20px;
    height: auto;
    margin-top: 30px;
    margin-bottom: 30px;
    box-shadow: 3px 3px 20px aquamarine;
}

.projects .projectslider {
    width: 100%;
    height: auto;
    display: grid;
    grid-auto-flow: column;
    justify-content: space-between;    
    overflow-x: scroll;
    margin-top: 20px;
    padding-bottom: 10px;
}

.projects .projectheader {
    font-size: xx-large;
    font-family: 'titles';
    color: goldenrod;
}

.projects .projectslider .slide {
    width: 300px;
    height: 300px;
    color: black;
    background-color: bisque;
    box-shadow: 3px 3px 5px;
    border-radius: 20px;
    margin-right: 15px;
    opacity: .8;
    display: flex;
    flex-direction: column;
    align-items: center;
}


.projects .projectslider .slide:hover {
    opacity: 1;
}

.projects .projectslider .slide:visited{
    color: black;
}

.projects .projectslider .slide .pname {
    width: 300px;
    height: 200px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.projects .projectslider .slide span {
    margin-top: 5px;
    font-family: 'titles';
}

.projects .projectslider .slide .tags{
    margin-top: 5px;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
    justify-content: center;
    width: 200px;
    align-items: center;
}

.projects .projectslider .slide .tags .tag{
    display: flex;
    justify-content: center;
    width: 50px;
    font-size: 14px;
    color: white;
    background-color: green;
    border-radius: 5px;
    font-family: 'subtitle';
    text-align: center;
}

.trail {
    height: 20px;
    width: 20px;
    border-radius: 50px;
    background-color: aquamarine;
    position: fixed;
    top:0;
    left:0;
    pointer-events: none;
    z-index: 99999999;
}

@media screen and (max-width: 1400px) {
    .whoiam {
        flex-direction: column;
    }
    .whoiam .text {
        width: 90%;
    }

    .whoiam .img {
        width: 90%;
    }
}

@media screen and (max-width: 900px) {
    .whoiam {
        width: 90%;
    }

    .name .title {
        font-size: 48px;
    } 

    .projects {
        width: 90%;
    }
}


@media screen and (max-width: 500px) {
    #dog {
        display: none;
    }
}

@media screen and (max-width: 400px) {
    #title {
        text-align: center;
    }
    .projects {
        display: none;
    }
}

@media screen and (max-width: 250px) {
    .whoiam {
        display: none;
    }

    .name {
        height: 100vh !important;
        display: flex;
        background: none !important;
        align-items: center;
        justify-content: center;
        background-image: linear-gradient(aqua, green) !important;
    }

    #title {
        transform: rotate(90deg);
    }
}

@media (hover: none) and (pointer: coarse) {
    .trail {
        display: none;
    }
    .rain1 {
        display: none;
    }
}

